assets/styles.css
/* Universal Selector */
* {
  font-family: sans-serif;
}

#name {
  font-size: 2.8em;
  font-weight: bold;
  background-color: rgb(18, 18, 17);
  padding: 10px 40px 10px 40px;
  text-align: left;
  align-items: center;
  white-space: nowrap;
  color: #e4dec4;
}

header {
  height: 10cm;
}

h1 {
  display: flex;
  font-size: 28px;
  font-family: "Courier New", Courier, monospace;
}

h2 {
  font-size: 35px;
  font-family: "Courier New", Courier, monospace;
}

ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

nav {
  background-color: black;
  display: flex;
  justify-content: space-evenly;
  width: 100%;
}

li {
  height: 1rem;
  width: 6rem;
  list-style-type: none;
  
}

.nav-items {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  border-color: black;
  border-style: double;
  border-radius: 5cm;
  display: flex;

  margin-right: 1cm;
}

#header-text {
  color: #bfaf5c;
  text-align: right;
  margin-right: 2cm;
  position: relative;
  top: 15rem;
  right: 0;
  font-family: fantasy;
  font-size: 85px;
}

.header-background {
  background-image: url(./images/candle.jpg);
  background-size: 1889px 377.94px;
  background-repeat: no-repeat;
}

aside h2 {
  float: left;
  height: 4cm;
  width: 4cm;
  border-right: 0.08cm solid black;
  margin-top: 0.5cm;
  margin-left: 1.5cm;
  text-align: center;
  vertical-align: middle;
}

aside h3 {
  float: left;
  height: 20cm;
  width: 4cm;
  border-right: 0.08cm solid black;
  margin-top: -19.5cm;
  margin-right: 49cm;
  text-align: center;
  font-size: 35px;
  font-family: "Courier New", Courier, monospace;
}

aside h4 {
  float: left;
  height: 2cm;
  width: 4cm;
  border-right: 0.08cm solid black;
  margin-top: 0.5cm;
  margin-left: 1.5cm;
  text-align: center;
  vertical-align: middle;
  font-size: 35px;
  font-family: "Courier New", Courier, monospace;
}

p {
  margin-top: 0.9cm;
  margin-left: 7cm;
  margin-right: 7cm;
  font-family: monospace;
  font-size: 15px;
  margin-bottom: 10px;
}

.container-work {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 1889px;
  margin-top: 0.5cm;
  margin-left: 3cm;
  margin-right: 2cm;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 13px;
}

#main-box {
  background-image: url(./images/horiseon.png);
  background-repeat: no-repeat;
  background-position: center;
  background-clip: content-box;
  background-size: cover;
  width: 60%;
  height: 5cm;
  align-items: center;
  align-content: center;
  margin-bottom: 40px;
  border: 0.05cm solid #36405b;
  border-radius: 10px;
}

#box2 {
  background-image: url(./images/js.jpeg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 25%;
  height: 5cm;
  align-items: center;
  align-content: center;
  margin-bottom: 40px;
  border: 0.05cm solid #36405b;
  border-radius: 10px;
}

#box3 {
  background-image: url(./images/quiz.jpeg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 25%;
  height: 5cm;
  align-items: center;
  align-content: center;
  margin-bottom: 40px;
  border: 0.05cm solid #36405b;
  border-radius: 10px;
}

#box4 {
  background-image: url(./images/scheduler.jpeg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 25%;
  height: 5cm;
  align-items: center;
  align-content: center;
  margin-bottom: 40px;
  border: 0.05cm solid #36405b;
  border-radius: 10px;
}

#box5 {
  background-image: url(./images/weather.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  width: 25%;
  height: 5cm;
  align-items: center;
  align-content: center;
  margin-bottom: 40px;
  border: 0.05cm solid #36405b;
  border-radius: 10px;
}

.contact-me {
  display: flex;
  align-content: center;
  justify-content: space-evenly;
  flex-direction: row;
  margin-right: 30cm;
  position: relative;
  bottom: -2rem;
}

#contact-me1 {
  border-style: solid;
  border-radius: 10px;
  background-image: url(./images/phone.png);
  background-position: center;
  background-size: cover;
  width: 4.5cm;
  text-align: center;
  margin-right: 2cm;
  margin-left: 78rem;
  height: 1cm;
}

#contact-me2 {
  border-style: solid;
  border-radius: 10px;
  background-image: url(./images/github.png);
  background-position: center;
  background-size: cover;
  width: 4.5cm;
  text-align: center;
  margin-right: 2cm;
  height: 1cm;
}

#contact-me3 {
  border-style: solid;
  border-radius: 10px;
  background-image: url(./images/mail.png);
  background-position: center;
  background-size: cover;
  width: 4.5cm;
  text-align: center;
  margin-right: 2cm;
  height: 1cm;
}

#contact-me4 {
  border-style: solid;
  border-radius: 10px;
  background-image: url(./images/linkedin.png);
  background-position: center;
  background-size: cover;
  width: 4.5cm;
  text-align: center;
  margin-right: 2cm;
  height: 1cm;
}

.container-work a {
  background-color: #36405b;
  color: blanchedalmond;
  border-radius: 10px;
  border-style: ridge;
  width: 3cm;
  height: 1.2cm;
  text-align: center;
  justify-content: left;
}

#contact-me1 a {
  background-color: aliceblue;
  border-radius: 10px;
}

#contact-me2 a {
  background-color: aliceblue;
  border-radius: 10px;
}

#contact-me3 a {
  background-color: aliceblue;
  border-radius: 10px;
}

#contact-me4 a {
  background-color: aliceblue;
  border-radius: 10px;
}

@media screen and (max-width: 992px) {
  h1 {}
}

/* @media screen and (max-width: 768px) {
 
}

@media screen and (max-width: 576px) {
 
} */

